Fixed alerts using whitespace and not being empty.

--- a/app/assets/css/stream/streamPage.less
+++ b/app/assets/css/stream/streamPage.less
@@ -47,6 +47,8 @@
 
 .color-label {
     display: block;
+    text-align: center;
+    min-height: 20px;
     color: #bbb;
     text-transform: lowercase;
 }
